--- a/XCConfigs/DifferenceKit.xcconfig
+++ b/XCConfigs/DifferenceKit.xcconfig
@@ -11,7 +11,7 @@ VALID_ARCHS[sdk=iphoneos*] = arm64 armv7 armv7s
 VALID_ARCHS[sdk=iphonesimulator*] = arm64 i386 x86_64
 VALID_ARCHS[sdk=appletv*] = arm64
 VALID_ARCHS[sdk=appletvsimulator*] = arm64 x86_64
-VALID_ARCHS[sdk=watchos*] = armv7k
+VALID_ARCHS[sdk=watchos*] = arm64_32 armv7k
 VALID_ARCHS[sdk=watchsimulator*] = arm64 i386
 
 CODE_SIGN_IDENTITY =
